# EatToken

./: .gitignore  Dockerfile  LICENSE  README.md  README.zh.md  pyproject.toml  requirements.txt  run.py
docs/superpowers/specs/: 2026-07-19-eattoken-design.md
src/eattoken/cli/: main.py
src/eattoken/config/: default.yaml
src/eattoken/core/: engine.py  generator.py  models.py  profiler.py
src/eattoken/i18n/: __init__.py  en.yaml  zh.yaml
src/eattoken/known_models/: __init__.py  registry.py
src/eattoken/providers/: anthropic.py  base.py  factory.py  google.py  openai.py
src/eattoken/web/: app.py  routes.py
src/eattoken/web/static/: app.js  style.css
src/eattoken/web/templates/: index.html
tests/: test_i18n.py  test_scaffold.py
tests/cli/: test_main.py  test_run_integration.py
tests/core/: test_engine.py  test_generator.py  test_profiler.py
tests/providers/: test_anthropic.py  test_factory.py  test_google.py  test_openai.py
tests/web/: test_app.py  test_live_flow.py  test_routes.py
