[project]
name = "eat-token"
version = "0.1.0"
description = "Rapidly consume LLM API tokens with parallel requests"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.111",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "transformers>=4.40",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
eat-token = "eattoken.cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
